[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
http-muncher = "0.3.2"
rustc-serialize = "0.3.24"
sha1 = "0.10.1"
