[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"] }
http-muncher = "0.3.2"
rustc-serialize = "0.3.24"
sha1 = "0.10.1"
byteorder = "1.4.3"
bytes = "1.0.0"
websocket = "0.26.5"
clap = { version= "3.1.18", features = ["derive"]}
tokio = { version = "1", features = ["full"]}

tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}

tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

